2011-10-07  Corinna Vinschen  <corinna@vinschen.de>
	    Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.h (fhandler_console::tc_getpgid): New function.
	* spawn.cc (spawn_guts): Add logic to put pure-windows processes "in
	the background" when they are started that way.

2011-10-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/cygwin.h (cygwin_getinfo_types): Define values
	additionally as preprocessor symbols.

2011-10-06  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_termios.cc (fhandler_termios::tcsetpgrp): Send __SIGSETPGRP
	pseudo signal to process group instead of just calling
	init_console_handler.
	* sigproc.cc (wait_sig): Call init_console_handler here on __SIGSETPGRP
	signal.
	* sigproc.h (__SIGSETPGRP): Define.

2011-10-06  Christian Franke  <franke@computer.org>

	* include/cygwin/wait.h: Use new __wait_status_to_int()
	macro to access status value in W*() status checks.
	Fix status description.
	* include/sys/wait.h: Allow `int' and `union wait' as
	wait status parameter.  Change __wait_status_to_int()
	macro and wait () prototypes accordingly.  Add inline
	functions for C++.  Remove extra `;'.

2011-10-05  Corinna Vinschen  <corinna@vinschen.de>

	* external.cc (create_winenv): Rename from sync_winenv.  Take
	environment pointer as parameter and return pointer to corresponding
	win32 environment block if != NULL.  Otherwise just sync as before.
	(cygwin_internal): Add CW_CVT_ENV_TO_WINENV case.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add CW_CVT_ENV_TO_WINENV.

2011-10-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (socketpair): Bind first socket to loopback only as well.

2011-09-21  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* tty.cc (grantpt): Check for valid fd.
	(unlockpt): Ditto.

2011-09-02  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_getsockopt): Drop erroneous double conversion of error